// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`useBuffer Hook with StrictMode should match snapshot for initial render 1`] = `
{
  "createBufferCalls": 2,
  "destroyCalls": 1,
}
`;

exports[`useBuffer Hook with StrictMode should match snapshot when schema changes 1`] = `
{
  "afterSchemaChange": {
    "createBufferCalls": 4,
    "destroyCalls": 3,
  },
  "initial": {
    "createBufferCalls": 2,
    "destroyCalls": 1,
  },
}
`;

exports[`useBuffer Hook without StrictMode should match snapshot for initial render 1`] = `
{
  "createBufferCalls": 1,
  "destroyCalls": 0,
}
`;

exports[`useBuffer Hook without StrictMode should match snapshot when schema changes 1`] = `
{
  "afterSchemaChange": {
    "createBufferCalls": 2,
    "destroyCalls": 1,
  },
  "initial": {
    "createBufferCalls": 1,
    "destroyCalls": 0,
  },
}
`;
